# learning-opengl

./: CMakeLists.txt  Camera.cpp  Common.h  Drawable.cpp  Math.cpp  Math.h  Object.cpp  README.md  camera.cpp  camera.h  componentExample.cpp  componentExample.h  deserializer.cpp  deserializer.h  event.h  idGenerators.cpp  idGenerators.h  input.cpp  input.h  list.h  logging.cpp  logging.h  main.cpp  main.h  nanoId.cpp  nanoId.h  object.cpp  object.h  scene.cpp  scene.h  settings.h  test.cpp  text.cpp  transform.cpp  transform.h  workQueue.cpp  workQueue.h
components/: Moving.cpp  Moving.h  camera.cpp  camera.h  collider.cpp  collider.h  component.h  componentExample.cpp  componentExample.h  myComponent.cpp  myComponent.h  myComponent2.cpp  myComponent2.h  renderer.cpp  renderer.h  rotateComponent.cpp  rotateComponent.h  transform.cpp  transform.h
components/renderer/: customRenderer.cpp  renderer.h  rendererBase.cpp  spriteRenderer.cpp  spriteSheetRenderer.cpp
dependencies/include/linmath/: linmath.h
json/: CMakeLists.txt  jsonArray.cpp  jsonArray.h  jsonLexer.cpp  jsonLexer.h  jsonObject.cpp  jsonObject.h  jsonParser.cpp  jsonParser.h  jsonToken.cpp  jsonToken.h  jsonValue.cpp  jsonValue.h
json++/: CMakeLists.txt
json++/include/json++/: json.h
json++/src/: jsonArray.cpp  jsonObject.cpp  jsonObject.h  jsonParser.cpp
json/include/: json.h
json/src/: jsonArray.cpp  jsonError.h  jsonObject.cpp  jsonParser.cpp  jsonToken.cpp  jsonValue.cpp
math/: Color.h  Math.h  bounds.h  buffers.h  columnMatrix.cpp  columnMatrix4x4.cpp  curve.cpp  curve.h  mathematics.h  matrix.h  matrix4x4.cpp  rowMatrix4x4.cpp  transform.cpp  vector2.cpp  vector3.cpp  vector4.cpp
math++/: CMakeLists.txt
math++/src/: curve.cpp
res/json files/: scene.json  types.json
res/shaders/: fragment.shader  lineFragment.shader  lineVertex.shader  vertex.shader
resources/: papa inverse.txt
resources/json files/: scene.json  types.json
resources/shaders/: mainFragment.shader
serializationAndDeserialization/: componentRegistry.cpp  componentRegistry.h  deserializer.cpp  deserializer.h
systems/: audio.cpp  audio.h  betterEvents.h  component.cpp  component.h  event.h  input.cpp  input.h  sequence.cpp  sequence.h  shader.h  text.cpp  text.h  texture.cpp  texture.h  tween.h  workQueue.cpp  workQueue.h
systems/audio/: audio.h  audioDevice.cpp  audioListener.cpp  audioListener.h  audioSource.cpp  audioSource.h  sound.cpp  sound.h
systems/audio/effects/: audioEffect.h  eaxReverb.cpp  frequencyShifter.cpp  frequencyShifterEffect.cpp  pitchShifter.cpp  ringModulator.cpp  vocalMorpher.cpp
systems/audio/filters/: bandPassFilter.cpp  highPassFilter.cpp  lowPassFilter.cpp
systems/opengl wrappers/: betterShader.cpp  betterShader.h  shader.cpp  shaderProgram.cpp  shaderProgram.h  texture.cpp  window.cpp  window.h
systems/tweens/: callbackTween.cpp  localPositionTween.cpp  localRotationTween.cpp  localScaleTween.cpp  sequenceTween.cpp  tween.h  waitTween.cpp
tests/: MathTests.cpp  curveTests.cpp  deserializationTests.cpp  eventTests.cpp  jsonTests.cpp  listTests.cpp  matrixTests.cpp  nanoIdTests.cpp  transformTests.cpp
zero/: CMakeLists.txt
zero/dependencies/include/: stb_image.h
zero/dependencies/include/glad/: gl.h
zero/include/: zero.h
zero/include/zero/: zero.h
zero/src/: .gitignore  README.md  application.cpp  application.h  nanoId.cpp  nanoId.h  object.cpp  object.h  scene.cpp  scene.h  settings.h  transform.cpp  transform.h
zero/src/components/: camera.cpp  camera.h
zero/src/components/renderer/: customRenderer.cpp  renderer.h  spriteRenderer.cpp  spriteSheetRenderer.cpp
zero/src/serialization/: componentRegistry.cpp  componentRegistry.h  deserializer.cpp  deserializer.h
zero/src/systems/: component.cpp  component.h  events.h  input.h
zero/src/systems/audio/: audioListener.cpp  audioListener.h  audioSource.cpp  audioSource.h
zero/src/systems/audio/effects/: audioEffect.h  autowah.cpp  chorus.cpp  compressor.cpp  distortion.cpp  eaxReverb.cpp  echo.cpp  equalizer.cpp  flanger.cpp  reverb.cpp
zero/src/systems/audio/filters/: audioFilter.h
zero/src/systems/opengl-wrappers/: shader.cpp  shader.h  shaderProgram.h  texture.h  window.cpp  window.h
zero/src/systems/tweens/: callbackTween.cpp  sequenceTween.cpp  tween.h  waitTween.cpp
